subdir('cliterm')
subdir('ublox-test')
subdir('area-tool')
subdir('flashdl')

install_data(
  'mwp-plot-elevations.rb',
  rename:  'mwp-plot-elevations',
  install_dir: 'bin', install_mode: 'rwxr-xr-x'
)

install_data(
  'flash.sh',
  rename:  'fcflash',
  install_dir: 'bin', install_mode: 'rwxr-xr-x'
)
