
install_data (
  ['vcols.css', 'default.layout', 'beep-sound.ogg', 'bleet.ogg',
   'menubar.ui', 'mwp.ui', 'mwpsc.ui', 'orange.ogg', 'sat_alert.ogg'],
  install_dir: join_paths(get_option('datadir'), 'mwp')
)

install_subdir('pixmaps', install_dir : join_paths(get_option('datadir'), 'mwp'))
install_data('org.stronnag.mwp.desktop', install_dir : join_paths(get_option('datadir') , 'applications'))
install_data('mwp-mimetypes.xml', install_dir : join_paths(get_option('datadir') , 'mime', 'packages'))
