[package]
name = "crsfparser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
json = "0.12.4"
base64 = "0.13.0"
getopts = "0.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
